--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         <div class="pencil"></div>
       </div>
     </div>
+
+  <style type="text/css">
+    .meteo{
+
+    }
+  </style>
+  <div class="element-box">
+    <div class="icon-box">
+      <div class="meteo"></div>
+    </div>
+  </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- // <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
     <script src="assets/js/jquery-1.11.0.min.js" type="text/javascript"></script>
